# myLinux

./: .gdbinit  .gdbinit.py  .gitignore  .gitmodules  AUTHORS  Config.in  Kconfig  LICENSE  Makefile  README  README.md  TODO.md  core.mk  external.desc  external.mk  initramfs.devnodes  package.mk  pkg.mk  quick.mk  ramdisk.mk  rules.mk  small.config
.github/workflows/: build.yml
arch/: Kconfig  Makefile  ramdisk.mk
arch/arm/: Kconfig  (+2 more)
boot/: Kconfig  Makefile
configs/: amd64_defconfig  amd64_netconf_defconfig  clearfog_defconfig  cn9130_defconfig  espressobin_defconfig  licheepi_nano_defconfig  macchiatobin_defconfig  neo_defconfig  r2s_defconfig  rpi2_defconfig  x86_64_defconfig  zero_defconfig
doc/: AUTHORS
kconfig/: .gitignore  Makefile  confdata.c  config.mk  lex.zconf.c_shipped  zconf.tab.c_shipped
kernel/: Kconfig  Makefile  config-3.14  config-3.18  config-3.19  config-4.0  config-4.1  config-4.2  config-4.3  config-4.4  config-4.8  linux-3.14.config
lib/: Kconfig  Makefile
package/: Config.in
provides/: init.in  skeleton.in
src/: .gitignore  Makefile  busybox.config  linux.config
src/mech/: .gitignore  Makefile.am  NOTICE  README.md  clixon.xml.in  common.am  configure.ac
src/mech/include/: common.h
src/mech/src/: Makefile.am
src/mech/src/common/: Makefile.am  common-debug.c
src/mech/src/core/: Makefile.am  core-backend.c  core-cli.c  core-cli.cli
src/mech/src/ietf-interfaces/: Makefile.am  ietf-interfaces.c
src/mech/src/ietf-system/: Makefile.am  ietf-system.c
src/mech/yang/: Makefile.am  infix.yang
system/: Makefile  core.mk  initramfs.devnodes  pkg.mk  quick.mk  rules.mk
user/: Kconfig  Makefile
utils/: genqemush
(+416 files in other folders)
